--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@
   outline: none;
 }
 
+
 header p{
   text-align: center;
   font-size: .75em;
@@ -19,14 +20,77 @@ header p{
   width: 375px;
 }
 
-header img:nth-of-type(1) {
-  display: block;
-    margin-left: auto;
-    margin-right: auto; 
-    margin-bottom: 10px;
-    margin-top: 20px;
-    width: 130px;  
+header img{
+  margin-left: 7px;
+  margin-right: 7px; 
+  margin-bottom: 10px;
+  margin-top: 15px;
+  width: 25px;  
 }
+
+header nav a:nth-of-type(1) img{
+  margin-left: 37px;
+  margin-right: 45px; 
+  margin-bottom: 10px;
+  margin-top: 15px;
+  width: 100px;  
+}
+
+nav button{
+  background: none;
+  border: none;
+}
+
+nav ul li button{
+  position: relative;
+  left: 240px;
+}
+
+header nav button:nth-of-type(2){
+  margin-left: -10px;
+}
+
+nav {
+  order:-1;  
+}
+
+nav ul { 
+  width: 80%;
+  margin:0; 
+  padding:2em 0 0;
+  background: #ffffff;
+  list-style:none;
+  position:fixed;
+  left:0; right:0; top:0; bottom:0;
+  transform:translatex(-100%);
+  transition: .8s;
+  z-index:50;
+  
+}
+
+nav li a {
+  color: #637381;
+  line-height: 1.8em;
+  font-size: 1.2em;
+  font-family: sans-serif;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: .25em;
+  padding: .25em 1em;
+}
+
+header nav ul li:first-of-type button img{
+  width: 17px;
+  height: auto;
+}
+
+
+nav.showMenu ul {
+  transform:translatex(0%);
+  box-shadow:0px 5px 100px #1c1c1c;  
+}
+
 
 iframe{
   margin-top: -4px;
@@ -58,7 +122,7 @@ h4{
   margin-left: 15px;
 }
 
-a{
+section:nth-of-type(1) span a{
   color: #637381; 
   font-size: .70em;
   text-align: center;
@@ -92,13 +156,13 @@ section:nth-of-type(1) span{
 section:nth-of-type(1) main{
 	align-content: center;
 	overflow: scroll;
-	scroll-snap-type: x mandatory;
+  scroll-snap-type: x mandatory;
 }
 
 section:nth-of-type(1) main ul{
 	width: fit-content;
 	display: flex;
-	flex-direction: row;
+  flex-direction: row;
 	height: 300px;
 	width: 2000px;
 }
@@ -131,24 +195,21 @@ section:nth-of-type(1) article:nth-of-type(1){
   position: absolute;
 }
 
-section:nth-of-type(1) article button:first-of-type{
-  margin: 0px;
+/* section:nth-of-type(1) article button:first-of-type{
   position: relative;
   top: -30px;
   left: -150px;
 }
 
 section:nth-of-type(1) article button:last-of-type{
-  margin: 0px;
   position: relative;
   top: -53px;
   left: 150px;
-}
+} */
 
 p{
   font-family: sans-serif;
   color: #637381;
-
 }
 
 
@@ -176,9 +237,10 @@ section:nth-of-type(2) img{
 
 
 
-section:nth-of-type(2) button{
+section:nth-of-type(2) a{
   background-color:white;
   color: #637381;
+  text-decoration: none;
   text-transform: uppercase;
   border: none;
   text-align: center;
@@ -198,6 +260,7 @@ section:nth-of-type(2) button{
 
 
 section:nth-of-type(3){
+  position: relative;
   margin-left: 15px;
   margin-right: 15px;
 }
@@ -209,22 +272,25 @@ section:nth-of-type(3) img{
 
 section:nth-of-type(3) img:first-of-type{
   z-index: 1;
+  position: relative;
 }
 
 section:nth-of-type(3) img:last-of-type{
   z-index: -1;
-  float: right;
-  margin-top: -90%;
+  position: absolute;
+  top: -40px;
+  left: 145px;
 }
 
 section:nth-of-type(3) p{
-  margin-bottom: 1em;
+  margin-bottom: 2em;
   line-height: 2em;
 }
 
-section:nth-of-type(3) button{
+section:nth-of-type(3) a{
   background-color: #212b36;;
   color: #ffffff;
+  text-decoration: none;
   text-transform: uppercase;
   border: none;
   text-align: center;
@@ -248,13 +314,14 @@ section:nth-of-type(4){
 section:nth-of-type(4) img{
   width: 375px;
   margin: 0px;
-  margin-top: 20px;
+  margin-top: 3em;
   margin-bottom: 20px;
 }
 
-section:nth-of-type(4) button{
+section:nth-of-type(4) a{
   background-color:white;
   color: #637381;
+  text-decoration: none;
   text-transform: uppercase;
   border: none;
   text-align: center;
@@ -269,7 +336,6 @@ section:nth-of-type(4) button{
   top: 45%;
   left: 20%;
 }
-
 
 
 
@@ -292,9 +358,17 @@ section:nth-of-type(6) article img {
   position: relative;
 }
 
-section:nth-of-type(6) article > button{
+section:nth-of-type(6) span{
+  position: relative;
+  bottom: 80px;
+  left: 4.5em;
+  right: 4.5em;
+}
+
+section:nth-of-type(6) article >  span a{
   background-color: #212b36;;
   color: #ffffff;
+  text-decoration: none;
   text-transform: uppercase;
   border: none;
   text-align: center;
@@ -314,20 +388,20 @@ section:nth-of-type(6) ul{
   bottom: 0;
 }
 
-section:nth-of-type(6) ul li button{
+/* section:nth-of-type(6) ul li button{
   background: rgba(255, 255, 255, 0.2);
   border-color: rgba(255, 255, 255, 0.2);
   border-radius: 10000px;
   margin: 0 5px;
   cursor: pointer;
   padding: .5em;
-}
+} */
 
 
-section:nth-of-type(6) ul li button.selected{
+/* section:nth-of-type(6) ul li button.selected{
   background: rgba(255, 255, 255, 0.5);
   border-color: rgba(255, 255, 255, 0.5);
-}
+} */
 
 
 
@@ -346,10 +420,11 @@ section:nth-of-type(7) p{
   line-height: 2em;
 }
 
-section:nth-of-type(7) button{
+section:nth-of-type(7) a{
   background-color: #212b36;
   color: #ffffff;
   text-transform: uppercase;
+  text-decoration: none;
   border: none;
   text-align: center;
   font-family: sans-serif;
@@ -359,9 +434,11 @@ section:nth-of-type(7) button{
   padding-right: 1.3em;
   padding-top: .7em;
   padding-bottom: .7em;
-  margin-bottom: 3em;
 }
 
+section:nth-of-type(8){
+  margin-top: 3em;
+}
 
 section:nth-of-type(8) h3{
   text-align: center;
@@ -484,8 +561,9 @@ footer{
   margin-left: -7%;
 }  */
 
-footer ul li{
+footer ul li a{
   margin-left: 15px;
+  text-decoration: none;
   font-size:1em;
   color: #212b36;
   line-height: 1em;
